<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_android">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginTop"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/TextSize" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:columnCount="4"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingBottom="@dimen/paddingBottom"
        android:useDefaultMargins="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/SymbolButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/SymbolButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_7" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/SymbolButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/NumberButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/SymbolButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_minus" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            style="@style/SymbolButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_equal" />


    </GridLayout>


</FrameLayout>